--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_Ac73QDNznSmARX5A9WXzu9ho14t_tsA&libraries=places"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
