--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_Ac73QDNznSmARX5A9WXzu9ho14t_tsA&libraries=places"></script>
+    <script src="https://js.pusher.com/4.4/pusher.min.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
