--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,16 @@
     <div id="root"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_Ac73QDNznSmARX5A9WXzu9ho14t_tsA&libraries=places"></script>
     <script src="https://js.pusher.com/4.4/pusher.min.js"></script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/6.0.2/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#reserved-urls -->
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
